--- a/list/package.json
+++ b/list/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "react": "^16.8.6",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
   },
